===== 2.7 (??? ??, 2015) =====
* (planned) Tablet-oriented preferences dialog
* (planned) Sync: single book upload
* (planned) Fixed authors list/tags list editing
* (planned) CSS selectors priority

===== 2.6 (??? ??, 2015) =====
* Customisable main menu
* Simple widgets

===== 2.5.10 (Sep ??, 2015) =====
* Options for displaying current reading progress as percentage (by Danie Roux, danieroux@github)

===== 2.5.9 (Sep 11, 2015) =====
* Fixed cache access issue
* Fixed native library loading issue
* Updated Belarusian localization (by Usievaład Čorny)
* No FloatMath usages (class FloatMath removed in Android M)

===== 2.5.8 (Sep 04, 2015) =====
* Display brightness percent during adjustment (android 3 and higher)
* Fixed MS Word docs support

===== 2.5.7 (Aug 28, 2015) =====
* Better implementation of brighthess levels
* Minor issues in book sync

===== 2.5.6 (Aug 25, 2015) =====
* New (material design style) icon
* More brighthess levels in reading mode

===== 2.5.5 (Aug 14, 2015) =====
* Compatibility with new versions of LEO dictionary
* Fixed possible crash in (native) zip decompression
* Fized possible NPE in FileChooserActivity
* New style number picker preference (Android 3+)
* Updated Czech localisation (by Marek Pavelka)
* Updated Dutch localisation (by Frank Fesevur)

===== 2.5.4 (Jul 24, 2015) =====
* Fixed possible deadlocks
* Fixed possible fb2 footnotes text trimming

===== 2.5.3 (Jul 05, 2015) =====
* Fixed large libraries scanning issue
* Popups font size option
* Fixed ANSI text processing in MsWord files
* Ask what to run if both FBReader & FBReader Premium are installed
* Updated Czech localisation (by Marek Pavelka)
* Updated German localisation (by Matthias Dill)
* Updated Romanian localization (by Girlea Alex)

===== 2.5.2 (Jun 23, 2015) =====
* better communication with plugin cover services
* Updated Czech localisation (by Marek Pavelka)
* Updated German localisation (by Matthias Dill)

===== 2.5.1 (Jun 21, 2015) =====