@@ -708,6 +708,7 @@
 				<node name="summaryOn" value="عرض علامات الفهرس على شريط التقدم"/>
 				<node name="summaryOff" value="لا تعرض علامات الفهرس على شريط التقدم"/>
 			</node>
+			<node name="tocMarksMaxNumber" value="Maximum number of TOC marks to display" toBeTranslated="true"/>
 			<node name="showProgress" value="Show reading progress" toBeTranslated="true">
 				<node name="dontDisplay" value="Do not show" toBeTranslated="true"/>
 				<node name="asPages" value="As page number" toBeTranslated="true"/>
