@@ -716,6 +716,7 @@
 				<node name="summaryOn" value="Покажи съдържание по раздели в долния колонтитул"/>
 				<node name="summaryOff" value="Не показвай съдържание по раздели в долния колонтитул"/>
 			</node>
+			<node name="tocMarksMaxNumber" value="Maximum number of TOC marks to display" toBeTranslated="true"/>
 			<node name="showProgress" value="Show reading progress" toBeTranslated="true">
 				<node name="dontDisplay" value="Do not show" toBeTranslated="true"/>
 				<node name="asPages" value="As page number" toBeTranslated="true"/>
