@@ -716,6 +716,7 @@
 				<node name="summaryOn" value="Mostrar las marcas de la TDC en la barra del pie de página"/>
 				<node name="summaryOff" value="No mostrar las marcas de la TDC en la barra del pie de página"/>
 			</node>
+			<node name="tocMarksMaxNumber" value="Maximum number of TOC marks to display" toBeTranslated="true"/>
 			<node name="showProgress" value="Show reading progress" toBeTranslated="true">
 				<node name="dontDisplay" value="Do not show" toBeTranslated="true"/>
 				<node name="asPages" value="As page number" toBeTranslated="true"/>
