@@ -710,6 +710,7 @@
 				<node name="summaryOn" value="꼬리말 바에 TOC 표시 보이기"/>
 				<node name="summaryOff" value="꼬리말 바에 TOC 표시 보이지 않음"/>
 			</node>
+			<node name="tocMarksMaxNumber" value="Maximum number of TOC marks to display" toBeTranslated="true"/>
 			<node name="showProgress" value="Show reading progress" toBeTranslated="true">
 				<node name="dontDisplay" value="Do not show" toBeTranslated="true"/>
 				<node name="asPages" value="As page number" toBeTranslated="true"/>
