@@ -701,6 +701,7 @@
 				<node name="summaryOn" value="Hiện đánh dấu mục lục ở thanh cuối trang"/>
 				<node name="summaryOff" value="Không Hiện đánh dấu mục lục ở thanh cuối trang"/>
 			</node>
+			<node name="tocMarksMaxNumber" value="Maximum number of TOC marks to display" toBeTranslated="true"/>
 			<node name="showProgress" value="Show reading progress" toBeTranslated="true">
 				<node name="dontDisplay" value="Do not show" toBeTranslated="true"/>
 				<node name="asPages" value="As page number" toBeTranslated="true"/>
