@@ -30,6 +30,7 @@ public class FooterOptions {
 	}
 
 	public final ZLBooleanOption ShowTOCMarks;
+	public final ZLIntegerRangeOption MaxTOCMarks;
 	public final ZLBooleanOption ShowClock;
 	public final ZLBooleanOption ShowBattery;
 	public final ZLEnumOption<ProgressDisplayType> ShowProgress;
@@ -37,6 +38,7 @@ public class FooterOptions {
 
 	public FooterOptions() {
 		ShowTOCMarks = new ZLBooleanOption("Options", "FooterShowTOCMarks", true);
+		MaxTOCMarks = new ZLIntegerRangeOption("Options", "FooterMaxTOCMarks", 10, 1000, 100);
 		ShowClock = new ZLBooleanOption("Options", "ShowClockInFooter", true);
 		ShowBattery = new ZLBooleanOption("Options", "ShowBatteryInFooter", true);
 		ShowProgress = new ZLEnumOption<ProgressDisplayType>(
